force-app/main/default/objects/SPD_Creation_Exception_Rules__mdt/SPD_Creation_Exception_Rules__mdt.object-meta.xml
<CustomObject>
    <label>SPD Creation Exception Rule</label>
    <pluralLabel>SPD Creation Exception Rules</pluralLabel>
</CustomObject>