force-app/main/default/objects/SPD_Creation_Exception_Rules__mdt/fields/Excluded_GPNs__c.field-meta.xml
<CustomField>
    <fullName>Excluded_GPNs__c</fullName>
    <label>Excluded GPNs</label>
    <type>TextArea</type>
</CustomField>