force-app/main/default/objects/SPD_Creation_Exception_Rules__mdt/fields/Excluded_GPNs_Values__c.field-meta.xml
<CustomField>
    <fullName>Excluded_GPNs_Values__c</fullName>
    <label>Excluded GPNs Values</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>