force-app/main/default/objects/SPD_Creation_Exception_Rules__mdt/fields/Excluded_VOB_Types__c.field-meta.xml
<CustomField>
    <fullName>Excluded_VOB_Types__c</fullName>
    <label>Excluded VOB Types</label>
    <type>TextArea</type>
</CustomField>